healthy icon z-index fix for appStatus card

--- a/src/components/v2/appDetails/appDetails.scss
+++ b/src/components/v2/appDetails/appDetails.scss
@@ -27,3 +27,7 @@
 .app-info-bg {
     background: var(--window-bg);
 }
+
+.app-info-bg-gradient {
+    background: linear-gradient(to top, #ffffff 0, #ffffff 50px, var(--window-bg) 50px);
+}
